--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h1 class="text-3xl font-black text-transparent bg-clip-text bg-gradient-to-r from-red-600 to-yellow-500 mb-1 drop-shadow-sm">
             🌸 經典長輩圖產生器 4.0
         </h1>
-        <p class="text-gray-500 text-sm">致敬 rei.idv.tw 風格 | 支援直排、漸層、AI背景</p>
+        <p class="text-gray-500 text-sm"></p>
     </header>
 
     <main class="w-full max-w-6xl grid grid-cols-1 lg:grid-cols-12 gap-6 px-4">
@@ -358,3 +358,4 @@
     </script>
 </body>
 </html>
+
